--- a/website (ch02-00)/index.html
+++ b/website (ch02-00)/index.html
@@ -14,6 +14,7 @@ Project Files: 02-00
         <meta charset="utf-8" />
         <title>Cool Shoes &amp; Socks</title>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+        <link rel="stylesheet" href="css/reponsive.css">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
         </script>
@@ -39,8 +40,8 @@ Project Files: 02-00
                         <ul class="shop">
                             <li class="clothes"><a href="#">Clothes</a>
                                 <ul>
-                                    <li><a href="#">woman</a> </li>
-                                    <li><a href="#">man</a></li>
+                                    <li><a href="#">woman</a><img style="width:100px" src="https://i.pinimg.com/originals/8f/a3/36/8fa33655ad2fa8b46de74a2cd83af442.gif" alt=""> </li>
+                                    <li><a href="#">man</a><img style="width:100px" src="https://i.pinimg.com/originals/be/fb/8a/befb8ace0162fe2ca86ec0426ce06940.gif" alt=""></li>
                                 </ul>
                             </li>
                             <li class="shoes"><a href="#">Shoes</a>
